# RegistrationCode

./: Registration_FTP2.bat
2DNonRigid/: 2DNonRigidEx.cxx  CMakeLists.txt
2DRigidMI/: 2DRigidMIExample.cxx
2DRigidMI/src/: 2DRigidMIExample.cxx  CMakeLists.txt  ITKExampleReg4.cxx
Affine/src/: Affine.cxx  CMakeLists.txt
AlignmentPipeline/: plotHistogram.m  runRegistration.bat
AlignmentPipeline/src/: CMakeLists.txt  main.cxx
BiasCorrection/src/: CMakeLists.txt  itkN4BiasFieldCorrectionImageFilterTest.cxx
FiducialCode/src/: CMakeLists.txt  investigateFiducials.cxx
LongitudinalFeatureExtraction/: CMakeLists.txt
LongitudinalFeatureExtraction/LongitudinalFeatureExtraction/: CMakeLists.txt  LongitudinalFeatureExtraction.py
Multi-LevelRegistration/: CMakeLists.txt
Multi-LevelRegistration/Multi-LevelRegistration/: itkInitializationFilter.h  itkManageTransformsFilter.h  itkManageTransformsFilter.hxx  itkRegistrationFramework.h
PythonExamples/: Notes.py
Read-writeCSVExamples/: testReadingCSVFile.cxx
Read-writeCSVExamples/src/: CMakeLists.txt  testReadingCSVFile.cxx
RegularStepGradientDescentOptimizerNew/: itkRegularStepGradientDescentBaseOptimizer.cxx  itkRegularStepGradientDescentOptimizer.cxx  itkRegularStepGradientDescentOptimizer.h
RtoAReg/: CMakeLists.txt  RigidToAffineRegistration.cxx
RtoAReg-SlicerCompatible/: CMakeLists.txt
RtoAReg-SlicerCompatible/RegistrationCode/: RigidToAffineRegistration.xml
RtoAReg-SlicerCompatible/src/: CMakeLists.txt  RigidToAffineRegistration.cxx
RtoAReg/src/: RigidToAffineRegistration.cxx
SPIEanalysis/: runThresholding.bat
Slicer-MyExtension/: CMakeLists.txt
Slicer-MyExtension/Multi-Level Registration/: CMakeLists.txt  Multi-Level Registration.cxx  Multi-Level Registration.xml
Slicer-MyExtension/Multi-LevelRegistration/: CMakeLists.txt  Multi-LevelRegistration.cxx  Multi-LevelRegistration.xml  RigidCommandIterationUpdate.h  itkInitializationFilter.hxx  itkManageTransformsFilter.h  itkManageTransformsFilter.hxx  itkRegistrationFramework.h  itkRegistrationFramework.hxx  itkValidationFilter.h  itkValidationFilter.hxx
SourceDirectory/AlignmentPipeline/: README.txt  main.cxx  plotHistogram.m
SourceDirectory/CT-CTRegistrationWithSkeletonSegmentation/: CMakeLists.txt  README.txt
SourceDirectory/CT-CTRegistrationWithSkeletonSegmentation/RigidRegistration/: CMakeLists.txt  RigidRegistration.cxx
SourceDirectory/LabelMapOverlapModule/: CMakeLists.txt  CMakeListsWithSlicer.txt  CMakeListswithITK.txt  LabelMapOverlapModule.cxx  LabelMapOverlapModule.xml  README.txt
SourceDirectory/MultiLevelRegistration/: CMakeLists.txt  ReadWriteFunctions.h  ReadWriteFunctions.hxx  RigidCommandIterationUpdate.h  itkInitializationFilter.h  itkInitializationFilter.hxx  itkManageTransformsFilter.h  itkManageTransformsFilter.hxx  itkRegistrationFramework.h  itkRegistrationFramework.hxx  itkValidation.h  itkValidation.hxx  itkValidationFilter.h  itkValidationFilter.hxx  main.cxx
SourceDirectory/MultiLevelRegistration/MultiLevelRegistration/: CMakeLists.txt  MultiLevelRegistration.cxx  main.cxx  main.xml
SourceDirectory/MultiLevelRegistration/Validation/: Validation.cxx
SourceDirectory/MultiLevelRegistration/calculateDisplacement/: calculateDisplacement.cxx
SourceDirectory/MultiLevelRegistrationSuper/: CMakeLists.txt  PreprocessingFunctions.hxx  ReadWriteFunctions.hxx  RigidCommandIterationUpdate.h  itkInitializationFilter.h  itkInitializationFilter.hxx  itkManageTransformsFilter.h  itkManageTransformsFilter.hxx  itkPreprocessingFilter.h  itkPreprocessingFilter.hxx  itkRegistrationFramework.h  itkRegistrationFramework.hxx  itkValidationFilter.h  itkValidationFilter.hxx
SourceDirectory/MultiLevelRegistrationSuper/MultiLevelRegistration/: CMakeLists.txt  MultiLevelRegistration - Copy.cxx  MultiLevelRegistration.cxx  MultiLevelRegistration.xml  MultiLevelRegistration_old.cxx
SourceDirectory/MultiLevelRegistrationSuper/MultiLevelRegistration-Slicer/: CMakeLists.txt  MultiLevelRegistration.cxx  MultiLevelRegistration.xml
SourceDirectory/MultiLevelRegistrationSuper/MultiLevelRegistration-cmd/: CMakeLists.txt  MultiLevelRegistration.cxx
SourceDirectory/MultiLevelRegistrationSuper/MultiLevelRegistration-cmd/Validation/: Validation.cxx
SourceDirectory/MultiLevelRegistrationSuper/Validation/: CMakeLists.txt  Validation.cxx
SourceDirectory/MultiLevelRegistrationSuper/calculateDisplacement/: CMakeLists.txt  calculateDisplacement.cxx
SourceDirectory/SPIEanalysis/: AP20373_SPIE_Registration.bat  SPIE_isolateSkeletonsOfOriginalImages.bat  SPIE_isolateSkeletonsOfRegisteredImages.bat  SPIEregistration.bat  rigid_SPIE_registration.txt  runThresholding.bat
SourceDirectory/SPIEanalysis/src/IsolateSkeleton/: CMakeLists.txt
SourceDirectory/SupplementaryCode/: CMakeLists.txt  README.txt  plottingExample.py
SourceDirectory/SupplementaryCode/BiasCorrection/: CMakeLists.txt
SourceDirectory/SupplementaryCode/Histograms/: createHistograms.m
SourceDirectory/SupplementaryCode/ReadWriteFunctions/: ReadWriteFunctions.cxx
SourceDirectory/SupplementaryCode/determineOverlap/: CMakeLists.txt  determineOverlap.cxx
SourceDirectory/SupplementaryCode/investigateFiducials/: CMakeLists.txt
SourceDirectory/SupplementaryCode/parseInputFile/: CMakeLists.txt  itkParseInputFile.h  itkParseInputFile.hxx  parseInputFile.cxx
SourceDirectory/SupplementaryCode/resampleAndCropImages/: CMakeLists.txt  ResampleAndCropImages.cxx
SourceDirectory/SupplementaryCode/transformFiducials/: CMakeLists.txt  itkLandmarkAnalysis.hxx  test.bat
SourceDirectory/VersorToAffine/: README.txt
SourceDirectory/VersorToAffine-SlicerCompatible/: CMakeLists.txt  README.txt
VersorToAffine/: CMakeLists.txt  VersorToAffine.cxx
src/: CMakeLists.txt  main.cxx  plottingExample.py
src/BiasCorrection/: itkN4BiasFieldCorrectionImageFilterTest.cxx
src/Histograms/: CMakeLists.txt
src/ReadWriteFunctions/: CMakeLists.txt  ReadWriteFunctions.cxx
src/parseInputFile/: itkParseInputFile.h  itkParseInputFile.hxx  parseInputFile.cxx  parseInputFile.h  sampleInputFile.txt
(+6 files in other folders)
